Plugin Name: Multisite Theme Manager
Author: WPMUDEV
Lead developer: Maniu

== Changelog ==

= 1.0.0.3 =
* Fixed issue when opening themes admin page on other blog then main when in setup mode

= 1.0.0.2 =
* Fixed JS incompatibility with Firefox
* Removed PHP notices

= 1.0.0.1 =
* Changed translation text domain from wmd_prettythemes to wmd_multisitethememanager

= 1.0.0 =
* Initial Release