@@ -5,7 +5,10 @@ Lead developer: Maniu
 == Changelog ==
 
 = 1.0.0.3 =
+* Added option to set target for custom theme and author theme link
+* Added merging of config and site categories
 * Fixed issue when opening themes admin page on other blog then main when in setup mode
+* Fixed h2 floating problem on themes.php based admin pages
 
 = 1.0.0.2 =
 * Fixed JS incompatibility with Firefox
